# face-detection-ssd-caffe

./: CMakeLists.txt  README.md
caffe/include/caffe/proto/: caffe.pb.cc  caffe.pb.h
caffe_ssd/: Makefile
caffe_ssd/.cache/matplotlib/: fontlist-v300.json
caffe_ssd/python/caffe/: model_libs.py
caffe_ssd/src/caffe/util/: math_functions.cpp
demo/: cf_ssd_util.cpp  cf_ssd_util.hh  main.cpp
demo/cpp/: CMakeLists.txt  cf_ssd_config.hh  cf_ssd_detector.cpp  cf_ssd_detector.hh  main.cpp
demo/python/: evaluate.py  merge_bn_layers.py  ssd_detect_face.py
models/: ssd_vgg16_512.prototxt
models/deploy/: half_VGG16_SSD_300.prototxt  half_VGG16_SSD_512.prototxt  inception_SSD_640.prototxt  labelmap_face.prototxt  ssd_vgg16_512.prototxt
src/: CMakeLists.txt  cf_ssd_config.hh  cf_ssd_detector.cpp  cf_ssd_detector.hh  inf_face_detection_ssd_api.cpp  inf_face_detection_ssd_api.hh
tools/: create_data.sh  create_list.sh
train/: VGG16_half_channels_300.py  VGG16_half_channels_512.py  VGG16_reduce.py  mobileNet_v1.py  ssd_config.py  ssd_extra_feature_layers.py  ssd_header_layers.py  ssd_net_header.py  ssd_net_prepare.py  ssd_symbol.py  ssd_train.py  ssd_vgg.py
unit_test/: CMakeLists.txt
